crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_comment_trailing_split_list_item_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 97
expression: cst_output
---
DOCUMENT@0..23
  LIST@0..23
    LIST_ITEM@0..23
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      HTML_BLOCK_RAW@2..13
        HTML_BLOCK_TAG@2..13
          TEXT@2..13 "<!-- hi -->"
      PLAIN@13..23
        TEXT@13..22 " trailing"
        NEWLINE@22..23 "\n"
