crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_comment_trailing_split_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 97
expression: cst_output
---
DOCUMENT@0..24
  HTML_BLOCK_RAW@0..14
    HTML_BLOCK_TAG@0..14
      TEXT@0..14 "<!-- hello -->"
  PARAGRAPH@14..24
    TEXT@14..23 " trailing"
    NEWLINE@23..24 "\n"
