crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_blockquote_multiline_open_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..35
  BLOCK_QUOTE@0..35
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK_DIV@2..35
      HTML_BLOCK_TAG@2..19
        TEXT@2..6 "<div"
        NEWLINE@6..7 "\n"
        BLOCK_QUOTE_MARKER@7..8 ">"
        WHITESPACE@8..9 " "
        WHITESPACE@9..11 "  "
        HTML_ATTRS@11..17
          TEXT@11..17 "id=\"x\""
        TEXT@17..18 ">"
        NEWLINE@18..19 "\n"
      PARAGRAPH@19..26
        BLOCK_QUOTE_MARKER@19..20 ">"
        WHITESPACE@20..21 " "
        TEXT@21..25 "body"
        NEWLINE@25..26 "\n"
      HTML_BLOCK_TAG@26..35
        BLOCK_QUOTE_MARKER@26..27 ">"
        WHITESPACE@27..28 " "
        TEXT@28..34 "</div>"
        NEWLINE@34..35 "\n"
